# rust-actix-project-template

./: .env.example  Cargo.toml  docker-compose.yml
migrations/: 20240421130706_initiate_all.sql  20240421133333_add_users.sql
postman_collection/: learn-rust-actix-postgres.postman_collection.json  learn-rust-actix-postgres.postman_environment.json
src/: config.rs  database.rs  errors.rs  helpers.rs  main.rs  routes.rs  server.rs  services.rs
src/db/: postgres.rs
src/handlers/: health.rs
