[package]
name = "learn-rust-actix-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
dotenv = "0.15.0"
serde = "1.0.198"
serde_json = "1.0.116"
serde_derive = "1.0.198"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "mysql", "sqlite"] }
env_logger = "0.11.3"
listenfd = "1.0.1"
lazy_static = "1.4.0"
envy = "0.4.2"
derive_more = "0.99.17"
uuid = { version = "0.7.0", features = ["serde", "v4"] }
chrono = "0.4.38"
log = "0.4.21"
redis = { version = "0.25.3", features = ["tokio-comp"] }
